# final-project-fatalerror2

./: .gitignore  README.md  environment.yml  plot_forecast_vs_actual.docx  pyproject.toml
examples/: main.py  main2.py  svm.py
homework/: week9.py
inputs/: location.py
outputs/: Location1_cf_model.pkl  Location1_cf_scaler.pkl  Location1_lstm_model.h5  Location1_lstm_scaler.pkl  Location1_scaler.pkl  Location1_svm_model.pkl  Location1_svm_scaler.pkl  Location1_svr_model.pkl  Location2_cf_model.pkl  Location2_cf_scaler.pkl  Location2_lstm_model.h5  Location2_lstm_scaler.pkl  Location2_svm_model.pkl  Location2_svm_scaler.pkl  Location3_cf_model.pkl  Location3_cf_scaler.pkl  Location3_lstm_model.h5  Location3_lstm_scaler.pkl  Location3_svm_model.pkl  Location3_svm_scaler.pkl  Location4_cf_model.pkl  Location4_cf_scaler.pkl  Location4_lstm_model.h5  Location4_lstm_scaler.pkl  Location4_svm_model.pkl  Location4_svm_scaler.pkl
src/: WindPowerForecaster.py  __init__.py
tests/: test.py  test_functions.py
