[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project]
name = "final-project-fatalerror2"
version = "2020.0.0"
requires-python = ">=3.8, <3.13"
dependencies = [
  "numpy",
  "matplotlib",
  "pandas",
  "scipy",
  "tensorflow; python_version < '3.13'",
  "scikit-learn", 
  "pytest", 
  "joblib"
]

authors = [
  {name = "Adrian Dario Fistoli", email = "s242866@dtu.dk"},
  {name = "Christian Witt", email = "s203667@dtu.dk"},
  {name = "Ying Wang", email = "s242538@dtu.dk"},
]

description = "Python package for forecasting windpower forecasting using machine learning "
readme = "README.md"
license = "MIT"  # or license = {file = "LICENSE.txt"} for legacy declaration
license-files = ["LICEN[CS]E.*"]
keywords = ["Windpower", "Forecasting", "Machine learning"]


[project.urls]

Repository = "https://github.com/DTUWindEducation/final-project-fatalerror2"

